--- a/appspec.yml
+++ b/appspec.yml
@@ -1,9 +1,7 @@
-version: 0.0 #0.0固定
-os: linux    #デプロイ先サーバーのos
-files:       #アプリケーションの配置場所
+version: 0.0
    - source: /
      destination: /home/ec2-user/php
-permissions:  #配置ディレクトリのバージョン
+permissions: 
    - object: /home/ec2-user/php
      owner: ec2-user
      group: nginx
